agregacion del titulo de mi pagina

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mi primer sitio web</title>
 </head>
 <body>
+    <h1>TITULO DE MI PAGINA</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti minus a mollitia ipsum laudantium temporibus, aperiam reiciendis minima veniam, dolor, deserunt repellendus reprehenderit ea placeat corrupti quae suscipit commodi. A.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae qui perspiciatis ipsam nisi exercitationem, ab quasi voluptatibus incidunt minima aliquam et minus pariatur culpa esse libero id nesciunt distinctio.</p>
     <ul>
