--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mi primer sitio web</title>
 </head>
 <body>
-    <h1>TITULO DE MI PAGINA</h1>
+    <!-- <h1>TITULO</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti minus a mollitia ipsum laudantium temporibus, aperiam reiciendis minima veniam, dolor, deserunt repellendus reprehenderit ea placeat corrupti quae suscipit commodi. A.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae qui perspiciatis ipsam nisi exercitationem, ab quasi voluptatibus incidunt minima aliquam et minus pariatur culpa esse libero id nesciunt distinctio.</p>
     <ul>
@@ -15,6 +15,16 @@
         <li>tres</li>
         <li>cuatro</li>
     </ul>
-    <p class="foo"></p>
+    <p class="foo"></p> -->
+
+    <div style="background-color: red;border: 5px solid black;">
+        Elemento de bloque
+    </div>
+    <span style="background-color: yellow;">Hola</span> 
+    <span style="background-color: green;">Mundo</span>
+    <div style="background-color: orange;">Cruel</div>
+    <p style="background-color: violet;">Bloque</p>
+    <p style="background-color: aqua;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur quod aliquid rem, velit eligendi earum excepturi quia vero! Numquam nisi nulla assumenda voluptates maxime! Eum unde eligendi nobis. Sint, nulla!</p>
+
 </body>
 </html>
