Aumentamos separacion Santo Grial con div

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer sitio web</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- <h1>TITULO</h1>
@@ -17,14 +19,45 @@
     </ul>
     <p class="foo"></p> -->
 
-    <div style="background-color: red;border: 5px solid black;">
+
+    <!-- <div style="background-color: red;border: 5px solid black;">
         Elemento de bloque
     </div>
     <span style="background-color: yellow;">Hola</span> 
     <span style="background-color: green;">Mundo</span>
     <div style="background-color: orange;">Cruel</div>
     <p style="background-color: violet;">Bloque</p>
-    <p style="background-color: aqua;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur quod aliquid rem, velit eligendi earum excepturi quia vero! Numquam nisi nulla assumenda voluptates maxime! Eum unde eligendi nobis. Sint, nulla!</p>
+    <p style="background-color: aqua;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur quod aliquid rem, velit eligendi earum excepturi quia vero! Numquam nisi nulla assumenda voluptates maxime! Eum unde eligendi nobis. Sint, nulla!</p> -->
 
+    <!-- <div style="background-color: aqua; border: 5px solid magenta; padding: 20px;">Hola</div>
+    <span style="background-color: orangered;">Hola</span>
+
+    <p>Lorem ipsum, dolor sit amet consectetur <span style="color: green;">adipisicing</span> elit. Tempore eos veniam aut quaerat nemo itaque quasi perferendis temporibus eligendi corporis! Laboriosam numquam facilis harum dolorem, itaque sed iste nulla inventore.</p> -->
+
+    <div id="header">
+        <div id="nav">
+            <ul>
+                <li>Enlace 1</li>
+                <li>Enlace 2</li>
+                <li>Enlace 3</li>
+                <li>Enlace 4</li>
+            </ul>
+        </div>
+    </div>
+    <div id="aside-left"> ASIDE LEFT </div>
+    <div id="main">
+        <div id="article">
+            <div id="section-1"> 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ut cum architecto labore voluptatibus vitae magni impedit quidem quas optio laboriosam doloremque, dolore consectetur accusantium totam. Quibusdam error saepe eaque?
+            </div>
+            <div id="section-2"> 
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia praesentium, ipsa error atque id rem odit commodi, voluptatum deleniti expedita corrupti quas quis perferendis earum similique porro? Recusandae, odit minus!
+            </div>
+        </div>
+    </div>
+    <div id="aside-right"> ASIDE RIGHT </div>
+    <div id="footer"> 
+        <p> &copy 2024, Ferru</p>
+    </div>
 </body>
 </html>
