Hicimos el santo grial con lso elementos correctos

--- a/index.html
+++ b/index.html
@@ -3,61 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primer sitio web</title>
+    <title>SANTO GRIAL</title>
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <h1>TITULO</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti minus a mollitia ipsum laudantium temporibus, aperiam reiciendis minima veniam, dolor, deserunt repellendus reprehenderit ea placeat corrupti quae suscipit commodi. A.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi beatae qui perspiciatis ipsam nisi exercitationem, ab quasi voluptatibus incidunt minima aliquam et minus pariatur culpa esse libero id nesciunt distinctio.</p>
-    <ul>
-        <li>uno</li>
-        <li>dos</li>
-        <li>tres</li>
-        <li>cuatro</li>
-    </ul>
-    <p class="foo"></p> -->
+    <header id="header">
+        <nav id="nav">
+            <li>enlace 1</li>
+            <li>enlace 2</li>
+            <li>enlace 3</li>
+            <li>enlace 4</li>
+        </nav>
+    </header>
 
-
-    <!-- <div style="background-color: red;border: 5px solid black;">
-        Elemento de bloque
-    </div>
-    <span style="background-color: yellow;">Hola</span> 
-    <span style="background-color: green;">Mundo</span>
-    <div style="background-color: orange;">Cruel</div>
-    <p style="background-color: violet;">Bloque</p>
-    <p style="background-color: aqua;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur quod aliquid rem, velit eligendi earum excepturi quia vero! Numquam nisi nulla assumenda voluptates maxime! Eum unde eligendi nobis. Sint, nulla!</p> -->
-
-    <!-- <div style="background-color: aqua; border: 5px solid magenta; padding: 20px;">Hola</div>
-    <span style="background-color: orangered;">Hola</span>
-
-    <p>Lorem ipsum, dolor sit amet consectetur <span style="color: green;">adipisicing</span> elit. Tempore eos veniam aut quaerat nemo itaque quasi perferendis temporibus eligendi corporis! Laboriosam numquam facilis harum dolorem, itaque sed iste nulla inventore.</p> -->
-
-    <div id="header">
-        <div id="nav">
-            <ul>
-                <li>Enlace 1</li>
-                <li>Enlace 2</li>
-                <li>Enlace 3</li>
-                <li>Enlace 4</li>
-            </ul>
-        </div>
-    </div>
-    <div id="aside-left"> ASIDE LEFT </div>
-    <div id="main">
-        <div id="article">
-            <div id="section-1"> 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ut cum architecto labore voluptatibus vitae magni impedit quidem quas optio laboriosam doloremque, dolore consectetur accusantium totam. Quibusdam error saepe eaque?
-            </div>
-            <div id="section-2"> 
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia praesentium, ipsa error atque id rem odit commodi, voluptatum deleniti expedita corrupti quas quis perferendis earum similique porro? Recusandae, odit minus!
-            </div>
-        </div>
-    </div>
-    <div id="aside-right"> ASIDE RIGHT </div>
-    <div id="footer"> 
-        <p> &copy 2024, Ferru</p>
-    </div>
+    <aside id="aside-left">
+        ASIDE LEFT
+    </aside>
+    <main id="main">
+        <article id="article">
+            <section>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis a sunt non delectus deserunt, est sequi incidunt esse exercitationem et debitis repellendus consequuntur ducimus. Voluptatibus esse modi illum quo magni.
+            </section>
+            <section>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, et placeat. Labore quisquam delectus quae provident nam incidunt rem vel expedita, accusamus accusantium sequi ipsam dolor, optio maiores natus! Assumenda.
+            </section>
+        </article>
+    </main>
+    <aside id="aside-right">
+        ASIDE RIGHT
+    </aside>    
+    <footer id="footer">
+        &copy Ferru
+    </footer>
 </body>
 </html>
