Prueba de links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main id="main">
         <article id="article">
             <section>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis a sunt non delectus deserunt, est sequi incidunt esse exercitationem et debitis repellendus consequuntur ducimus. Voluptatibus esse modi illum quo magni.
+                <a href="lessons/titulos.html">TITULOS</a>
             </section>
             <section>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, et placeat. Labore quisquam delectus quae provident nam incidunt rem vel expedita, accusamus accusantium sequi ipsam dolor, optio maiores natus! Assumenda.
