--- a/lessons/titulos.html
+++ b/lessons/titulos.html
@@ -6,7 +6,69 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TITULO</h1>
+    <div class="encabezado">
+        <h1>SERIE A</h1>
+            <h2>AC MILAN</h2>
+
+    </div>
+
+    <div class="salto-de-linea">
+        <p>
+            Bolivia en sus montañas guarda el sol, <br>
+            ríos de historia en su suelo ancestral, <br>
+            bajo el cielo andino late el corazón, <br>
+            un pueblo valiente, su fuerza inmortal. 
+        </p>
+
+        <p>
+            Av. America<br>
+            Quijarro<br>
+            Papa Paulo
+        </p>
+    </div>
+
+    <div class="cambio-de-tema">
+        <p>1: AAAAAAAAA</p>
+        <hr>
+        <p>2: BBBBBBBBB</p>
+    </div>
+
+    <div class="wbo">
+        <p>
+            La Associazione Calcio Milan S. P. A. también conocida como A. C. Milan o simplemente Milan, 
+            es un club de fútbol italiano <wbr> que pertenece a la ciudad de Milán, en la región de Lombardía. 
+            Fundado el 16 de diciembre de 1899 por <wbr> Alfred Edwards y Herbert Kilpin, entre otros, bajo el 
+            nombre de Milan Foot-Ball & Cricket Club, adoptó su actual <wbr> denominación en 2003, la cual tuvo
+            su origen en 1945. Es considerado uno de los clubes más grandes del mundo.
+        </p>
+    </div>
+
+    <div class="superindice">
+        <p>La ecuacion mas famosa del mundo es: </p>
+        <p> E = m.c<sup>2</sup></p>
+    </div>
+
+    <div class="subindice">
+        <p>El mejor amigo de todo desarrollador es: C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub></p>
+    </div>
+
+    <div class="texto importante">
+        Este texto es muy <strong>importante</strong>
+    </div>
     
+    <div class="enfasis">
+        <p>
+            <em>Yo</em> no sabia eso
+        </p>
+        <p>
+            Yo <em>no</em> sabia eso
+        </p>
+    </div>
+
+    <div class="resaltado">
+        <p>
+            La rivalidad más enconada de los milanistas es frente al <mark>Inter de Milán</mark>, de la misma ciudad, con quien ha disputado un total de 209 encuentros desde que se enfrentasen por primera vez el 18 de octubre de 1908 en el conocido Derby della Madonnina.
+        </p>
+    </div>
 </body>
 </html>
