--- a/lessons/titulos.html
+++ b/lessons/titulos.html
@@ -1,74 +1,208 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos1.css">
 </head>
 <body>
-    <div class="encabezado">
-        <h1>SERIE A</h1>
-            <h2>AC MILAN</h2>
-
+    <!-- ENCABEZADOS -->
+    <div class="encabezados">
+        <h1>Beetles</h1>
+        <h2>External morphology</h2>
+            <h3>Head</h3>
+                <h4>Mouthparts</h4>
+            <h3>Thorax</h3>
+                <h4>Prothorax</h4>
     </div>
 
-    <div class="salto-de-linea">
-        <p>
-            Bolivia en sus montañas guarda el sol, <br>
-            ríos de historia en su suelo ancestral, <br>
-            bajo el cielo andino late el corazón, <br>
-            un pueblo valiente, su fuerza inmortal. 
-        </p>
-
-        <p>
-            Av. America<br>
-            Quijarro<br>
-            Papa Paulo
-        </p>
-    </div>
-
-    <div class="cambio-de-tema">
-        <p>1: AAAAAAAAA</p>
-        <hr>
-        <p>2: BBBBBBBBB</p>
-    </div>
-
-    <div class="wbo">
-        <p>
-            La Associazione Calcio Milan S. P. A. también conocida como A. C. Milan o simplemente Milan, 
-            es un club de fútbol italiano <wbr> que pertenece a la ciudad de Milán, en la región de Lombardía. 
-            Fundado el 16 de diciembre de 1899 por <wbr> Alfred Edwards y Herbert Kilpin, entre otros, bajo el 
-            nombre de Milan Foot-Ball & Cricket Club, adoptó su actual <wbr> denominación en 2003, la cual tuvo
-            su origen en 1945. Es considerado uno de los clubes más grandes del mundo.
-        </p>
-    </div>
-
-    <div class="superindice">
-        <p>La ecuacion mas famosa del mundo es: </p>
-        <p> E = m.c<sup>2</sup></p>
-    </div>
-
-    <div class="subindice">
-        <p>El mejor amigo de todo desarrollador es: C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub></p>
-    </div>
-
-    <div class="texto importante">
-        Este texto es muy <strong>importante</strong>
+    <!-- PARRAFOS  -->
+    <div class="parrafos">
+        <p>Durante los últimos años el uso del teléfono móvil ha ido creciendo de manera exponencial, especialmente tras la eclosión de los dispositivos inteligentes. Estos se han convertido en nuestros compañeros de bolsillo (y de vida) que nos acompañan allá donde vayamos.
+        Sin embargo, un uso excesivo y no racional puede ocasionar problemas de dependencia, adicción y miedo.</p>
+        <p>La nomofobia (non-mobile-phone-phobia) puede entenderse como un miedo o ansiedad extrema de carácter irracional que se origina cuando la persona permanece durante un período de tiempo sin poder usar su teléfono móvil.
+        Bien por no tenerlo al alcance o bien por haber agotado la batería, plan de datos o imposibilidad de conectarse a una red wifi.</p>
     </div>
     
-    <div class="enfasis">
+    <!-- SALTO DE LINEA -->
+    <div class="salto-de-linea">
         <p>
-            <em>Yo</em> no sabia eso
+            Según calcula mi padre, <br>
+            yo he de llegar a doctor. <br>
+            Opina en contra mi madre, <br>
+            que quiere hacerme tenor. <br>
         </p>
         <p>
-            Yo <em>no</em> sabia eso
+            P. Sherman<br>
+            Calle Wallaby 42<br>
+            Sydney
         </p>
     </div>
 
+    <!-- CAMBIO DE TEMA -->
+    <div class="cambio-de-tema">
+        <p>§1: La primera regla del club de la pelea es: No hablar del club de la pelea.</p>
+        <hr>
+        <p>§2: La segunda regla del club de la pelea es: Siempre traer pastelitos.</p>
+    </div>
+
+    <!-- WORD BREAK OPPORTUNITY -->
+    <div class="wbo">
+        <p> 
+            Existe una canción que describe la forma milagrosa en la que uno puede salir airoso 
+            de situaciones difíciles. Esta canción se llama Super<wbr>califragilisticoespialidoso
+        </p>    
+    </div>
+
+    <!-- SUPERINDICE -->
+    <div class="superindice">
+        <p>La ecuación mas famosa del mundo es: </p>
+        <p>E = m.c <sup>2</sup></p>
+    </div>
+
+    <!-- SUBINDICE -->
+    <div class="subindice">
+        <p>
+            El mejor amigo de todo desarrollador es: 
+            C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>,
+            también conocido como...  
+        </p>
+    </div>
+
+    <!-- TEXTO MUY IMPORTANTE -->
+    <div class="texto-muy-importante">
+        <p>
+            ... la regla más importante, la regla que nunca puedes olvidar, 
+            no importa cuánto llore, no importa cuánto suplique: 
+           <strong>nunca le des comida después de la medianoche</strong>
+        </p>
+    </div>
+
+    <!-- ENFASIS -->
+    <div class="enfasis">
+        <p>
+            <em>A mi</em> me gustan tus pinturas
+        </p>
+        <p>
+            A mi me gustan <em>tus</em> pinturas
+        </p>
+    </div>        
+
+    <!-- RESALTADO -->
     <div class="resaltado">
         <p>
-            La rivalidad más enconada de los milanistas es frente al <mark>Inter de Milán</mark>, de la misma ciudad, con quien ha disputado un total de 209 encuentros desde que se enfrentasen por primera vez el 18 de octubre de 1908 en el conocido Derby della Madonnina.
+            Sócrates
+            se hacía el ignorante, es decir, aparentaba ser más tonto de lo
+            que era. Esto lo llamamos <mark>ironía socrática</mark>.
         </p>
+    </div>
+
+    <!-- CITA EN LINEA -->
+    <div class="cita-en-linea">
+        <p>When Dave asks HAL to open the pod bay door, HAL answers: 
+            <q cite="https://www.imdb.com/title/tt0062622/quotes/qt0396921">
+                I'm sorry, Dave. I'm afraid I can't do that.
+            </q>
+        </p>
+    </div>
+
+    <!-- CITA EN BLOQUE -->
+    <figure>
+        <blockquote cite="https://www.goodreads.com/quotes/117579-the-truth-may-be-puzzling-it-may-take-some-work">
+            <p>
+                La verdad puede ser desconcertante. Puede tomar algo de trabajo para digerirse. 
+                Puede ser contraintuitiva. Puede contradecir prejuicios profundamente arraigados. 
+                Puede que no sea acorde con lo que desesperadamente queremos que sea verdad. 
+                Pero nuestras preferencias no determinan la verdad.
+            </p>
+        </blockquote>
+        <figcaption>Carl Sagan, "<cite>Wonder and Skepticism</cite>"</figcaption>
+    </figure>
+
+    <!-- TÍTULO DE UN TRABAJO -->
+    <div class="titulo-de-trabajo">
+        <p>Mi libro faborito es <cite>El cerebro de broca</cite> de Carl Sagan</p>
+        <hr>
+        <figure>
+            <blockquote>
+                <p>
+                    Entre los habitantes de una aldea hay un, y solo un, barbero. Es un hombre 
+                    pulcro, respetado, que afeita a todos los hombres de la aldea que no se 
+                    afeitan a sí mismos, y solo a ellos. ¿Quién afeita al barbero?            
+                </p>
+                <p>
+                    En principio parece razonable que el barbero se afeite a sí mismo. Pero en 
+                    ese caso viola el requerimiento de afeitar a todos los aldeanos que no se 
+                    afeitan a sí mismos. Y si no se afeita a sí mismo, viola el requerimiento 
+                    de afeitar a todos los aldeanos que no se afeitan a sí mismos.                     
+                </p>
+            </blockquote>
+        <figcaption>Nicholas Falleta, "<cite>Las trampas de la paradoja</cite>"</figcaption>
+        </figure>
+    </div>
+
+    <!-- DEFINICIÓN DE TÉRMINOS -->
+    <div class="definiciones">
+        <p>
+            Un <dfn>validador</dfn> es un programa que revisa
+            errores de sintaxis en el código  o documentos.
+        </p>
+    </div>
+
+    <!-- ABREVIATURAS -->
+    <div class="abreviaturas">
+        <p>
+            Puedes usar <abbr title="Cascading Style Sheets">CSS</abbr> 
+            para darle estilo a tu <abbr title="HyperText Markup Language">HTML</abbr>.
+        </p>
+    </div>
+
+    <!-- TEXTO PEQUEÑO -->
+    <div class="texto">
+        <p>MDN Web Docs es una plataforma de aprendizaje de tecnologías web y el software 
+            que impulsa la web.</p>
+        <hr>
+        <p><small>El contenido está disponible bajo una licencia Creative Commons.</small></p>
+    </div>
+
+    <!-- TEXTO AÑADIDO (El señor de los anillos)-->
+    <div class="texto-agregado">
+        <p>“LLegas tarde!”</p>
+        <del><p>“Me disculpo por la demora.”</p></del>
+        <ins cite="../howtobeawizard.html" datetime="2018-05"><p>“Un mago nunca llega tarde…”</p></ins>
+    </div>
+
+    <!-- TEXTO ELIMINADO -->
+    <div class="texto-eliminado">
+        <p>“LLegas tarde!”</p>
+        <del><p>“Me disculpo por la demora.”</p></del>
+        <ins cite="../howtobeawizard.html" datetime="2018-05"><p>“Un mago nunca llega tarde…”</p></ins>
+    </div>
+
+    <!-- TACHAR TEXTO -->
+    <div class="tachar-texto">
+        <p><s>Habrá algunas entradas disponibles esta noche.</s></p>
+        <p>¡AGOTADO!</p>
+    </div>
+    <hr>
+    <div class="tachar-texto">
+        <p>¡Compra nuestro té helado y limonada!</p>
+        <p><s>Precio de venta recomendado: $3,99 por botella</s></p>
+        <p><strong>¡Ahora a la venta por solo $2.99 la botella!</strong></p>
+    </div>
+
+    <!-- CODIGO -->
+    <div class="codigo">
+        <p>El método <code>push()</code> agrega uno o más elementos al final de una matriz y devuelve la nueva longitud de la matriz.</p>
+    </div>
+    <hr>
+    <div class="codigo">
+        <pre><code>let x = 0;
+while (x < 10) { // La expresión devuelve verdadero cuando x es menor que 10
+    x++;
+}</code></pre>
     </div>
 </body>
 </html>
